# scyllash

./: Cargo.toml  Makefile  README.md  default_config.toml  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: continuous-integration.yml
src/: args.rs  lib.rs  main.rs
src/app/: mod.rs
src/tui/: mod.rs
