[package]
name = "scyllash"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
scylla = "0.13.2"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v1", "v4"] }
