[package]
name = "scyllash"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
scylla = "0.14.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v1", "v4"] }
