[package]
name = "scyllash"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
scylla = "0.15.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.11.1", features = ["v1", "v4"] }
